# strava_rust

./: .gitignore  Cargo.toml  README.md
shapes/DVG_ALKIS/: DVG_ALKIS.dbf  DVG_ALKIS.shx
shapes/VGS_SACHSEN/: gem.dbf  gem.sbn  gem.sbx  gem.shp  gem.shp.xml  gem.shx  kreis.dbf  kreis.sbn  kreis.sbx  kreis.shp  kreis.shp.xml  kreis.shx  om.dbf  om.sbn  om.sbx  om.shp  om.shp.xml  om.shx
src/: database.rs  main.rs  map_server.rs  strava.rs  tiles.rs
static/: index.html  sachsen_gemeinden.geojson  sachsen_kreise.geojson
