[package]
name = "rust_strava"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
